# necessary

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
necessary/: __init__.py  core.py  core.pyi
src/necessary/: __init__.py  __init__.pyi  core.py  core.pyi
tests/: test_necessary.py  test_parsing.py  test_with.py
