[project]
name = "necessary"
version = "0.2.3"
description = "Python package to enforce optional dependencies"
authors = [
    {name = "Luca Soldaini", email = "luca@soldaini.net" }
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "packaging>=21.0",
    "typing_extensions>=4.3.0"
]

[project.urls]
homepage = "https://github.com/soldni/necessary"

[project.optional-dependencies]
dev = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "mypy>=0.971",
    "pytest>=5.2",
    "ipython>=8.4.0",
    "autopep8>=1.7.0",
    "flake8>=5.0",
    "ipdb>=0.13.0",
    "flake8-pyi>=22.8.1",
    "Flake8-pyproject>=1.1.0"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0.0",
    "wheel"
]

# [tool.setuptools.packages.find]
# where = ["."]
# include = ["necessary*"]
# namespaces = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
necessary = ["py.typed", "*.pyi"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.autopep8]
max_line_length = 79
in-place = true
recursive = true
aggressive = 3

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
no_site_packages = true
allow_redefinition = false

[tool.mypy-tests]
strict_optional = false

[tool.flake8]
per-file-ignores = [
    '__init__.py:F401',
    '*.pyi:E301,E302,E305',
]
